data/all_generated_tests/raw_wast_tests/if_StackCorruption_1419.wast
;; 10. Excessive Nested Operations: Test deep nested constructs or sequences of 'if' leading to complex stack manipulations. ```wasm // Example (block   (if      (then       (drop)       (if          (then            (drop)(drop)         )       )     )   ) ) ``` *Reasoning*: Checks if highly nested operations preserve stack integrity, ensuring no stack overflows or corruption due to deep nesting.

(assert_invalid
  (module
    (func 
      (block
        (if
          (then
            (drop)
            (if
              (then
                (drop) (drop)
              )
            )
          )
        )
      )
    )
  )
  "type mismatch"
)